<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingTop="50dp"
    android:paddingEnd="20dp"
    tools:context=".view.addAlarm.AddAlarmActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_cross"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:text="@string/add_alarm"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_right"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.aigestudio.wheelpicker.WheelPicker
        android:id="@+id/wheel_period"
        android:layout_width="120dp"
        android:layout_height="200dp"

        android:layout_marginTop="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success"

        app:wheel_curved="true"
        app:wheel_indicator="true"
        app:wheel_indicator_color="@color/shallow_gray"

        app:wheel_item_text_color="@color/light_gray"
        app:wheel_item_text_size="20sp"

        app:wheel_selected_item_text_color="@color/shallow_blue"
        app:wheel_visible_item_count="5" />

    <com.aigestudio.wheelpicker.WheelPicker
        android:id="@+id/wheel_hour"
        android:layout_width="120dp"
        android:layout_height="200dp"

        app:layout_constraintEnd_toStartOf="@+id/wheel_minute"
        app:layout_constraintStart_toEndOf="@+id/wheel_period"
        app:layout_constraintTop_toTopOf="@+id/wheel_period"

        app:wheel_curved="true"
        app:wheel_cyclic="true"
        app:wheel_indicator="true"

        app:wheel_indicator_color="@color/shallow_gray"
        app:wheel_item_text_color="@color/light_gray"

        app:wheel_item_text_size="20sp"
        app:wheel_selected_item_text_color="@color/shallow_blue"
        app:wheel_visible_item_count="5" />

    <com.aigestudio.wheelpicker.WheelPicker
        android:id="@+id/wheel_minute"
        android:layout_width="120dp"
        android:layout_height="200dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wheel_period"
        app:wheel_curved="true"

        app:wheel_cyclic="true"
        app:wheel_indicator="true"
        app:wheel_indicator_color="@color/shallow_gray"

        app:wheel_item_text_color="@color/light_gray"
        app:wheel_item_text_size="20sp"

        app:wheel_selected_item_text_color="@color/shallow_blue"
        app:wheel_visible_item_count="5" />

    <LinearLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wheel_period">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_repeat"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_repeat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/no_repeat"
                android:textColor="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_arrow1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_arrow1"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#EEEEEE"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/switch_workday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_working_day"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wlan"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_workday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"

                app:trackTint="@color/switch_track_selector"
                app:thumbTint="@android:color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#EEEEEE"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_ringtone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_ring"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Morning Light"
                android:textColor="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_arrow2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_arrow2"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#EEEEEE"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_label"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alarm_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/alarm"
                android:textColor="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_arrow3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_arrow3"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#EEEEEE"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_ring_duration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringing_duration"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="5 分钟"
                android:textColor="@color/light_gray"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_arrow4"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_arrow4"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:tint="@color/light_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#EEEEEE"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_beep_interval"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beep_interval"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="10 分钟，3 次"
                android:textColor="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_arrow5"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_arrow5"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_gray" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>