<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    tools:context=".view.alarmClockRing.AlarmClockRingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back_arrow"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:text="@string/alarm_ring"
            android:textColor="@color/black"
            android:textSize="20sp"

            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        android:scrollbarSize="4dp"
        android:fadeScrollbars="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/item_vibration"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginTop="20dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"

                    android:focusable="true"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"

                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vibration"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_vibration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/standard"
                        android:textColor="@color/light_gray"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_arrow1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_arrow1"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/ic_right_arrow"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/light_gray" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/item_vibration_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/shallow_gray"

                    app:layout_constraintTop_toBottomOf="@id/item_vibration" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recommend_ring"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"

                    app:layout_constraintTop_toBottomOf="@+id/item_vibration">

                    <TextView
                        android:id="@+id/tv_recommend_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"

                        android:text="@string/recommend_ring"
                        android:textColor="@color/light_gray"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <LinearLayout
                        android:id="@+id/recommend_ring_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"

                        android:orientation="horizontal"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"

                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/tv_ringtone_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Morning Light"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rb_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@android:color/transparent"
                            android:buttonTint="@color/shallow_blue"
                            android:clickable="false"
                            android:focusable="false"
                            android:scaleX="1.1"

                            android:scaleY="1.1"
                            app:useMaterialThemeColors="false" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/item_recommend_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/shallow_gray"

                    app:layout_constraintTop_toBottomOf="@id/recommend_ring" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/classic_ring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    app:layout_constraintTop_toBottomOf="@+id/recommend_ring">

                    <TextView
                        android:id="@+id/tv_classic_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"

                        android:text="@string/classic_ring"
                        android:textColor="@color/light_gray"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_ringtone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintTop_toBottomOf="@+id/classic_ring"
                    tools:listitem="@layout/item_ringtone" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>